--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ num = "0.4.3"
 rayon = "1.11.0"
 num-traits = "0.2.19"
 rustc-hash = "2.1.1"
+indicatif = "0.18.3"
 
 
 [dev-dependencies]
@@ -26,5 +27,5 @@ paste = "1.0.15"
 pretty_assertions = "1.4.1"
 
 [[bench]]
-name = "benchmark"
+name = "aoc_benches"
 harness = false
