--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,20 @@ indicatif = "0.18.3"
 
 [dev-dependencies]
 criterion = "0.8.1"
-paste = "1.0.15"
 pretty_assertions = "1.4.1"
 
 [[bench]]
-name = "aoc_benches"
+name = "aoc_bench"
+harness = false
+
+[[bench]]
+name = "dsu_bench"
+harness = false
+
+[[bench]]
+name = "point_bench"
+harness = false
+
+[[bench]]
+name = "grid_bench"
 harness = false
